fix supplier search icons alignment

--- a/frontend/src/components/certificates/CertificateForm.css
+++ b/frontend/src/components/certificates/CertificateForm.css
@@ -30,15 +30,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 10rem;
+    width: 7rem;
     margin-top: 1.1rem;
-    height: 2.5rem;
     border: 1px solid var(--grey-color);
+    border-left: 1px hidden;
 }
 
 .form-container__icons svg {
     text-align: center;
-    flex: 1;
+    margin: 0 auto;
     cursor: pointer;
 }
 
